--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,24 @@
-{
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "name": "Debug TypeScript",
-      "type": "node",
-      "request": "launch",
-      "program": "${file}",
-      "runtimeArgs": ["-r", "ts-node/register"],
-      "skipFiles": ["<node_internals>/**"],
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
-    }
-  ]
-}
+// {
+//   "version": "0.2.0",
+//   "configurations": [
+//     {
+//       "name": "Debug Current File",
+//       "type": "node",
+//       "request": "launch",
+//       "runtimeExecutable": "npx",
+//       "runtimeArgs": [
+//         "ts-node",
+//         "${file}"
+//       ],
+//       "skipFiles": [
+//         "<node_internals>/**"
+//       ],
+//       "console": "integratedTerminal",
+//       "env": {
+//         "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json"
+//       },
+//       "cwd": "${workspaceFolder}",
+//       "sourceMaps": true
+//     }
+//   ]
+// }
