--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,11 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "declaration": true,
-    "declarationMap": true,
+    "declaration": false,
+    "declarationMap": false,
     "sourceMap": true,
+    "inlineSourceMap": false,
+    "inlineSources": false,
     "removeComments": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
