--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,10 @@
       "name": "Debug Current File",
       "type": "node",
       "request": "launch",
-      "program": "${workspaceFolder}/node_modules/ts-node/dist/bin.js",
+      "runtimeArgs": [
+        "-r",
+        "ts-node/register"
+      ],
       "args": [
         "${file}"
       ],
@@ -17,9 +20,9 @@
         "TS_NODE_PROJECT": "${workspaceFolder}/tsconfig.json"
       },
       "cwd": "${workspaceFolder}",
-      "sourceMaps": true,
-      "outFiles": [
-        "${workspaceFolder}/dist/**/*.js"
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
       ]
     }
   ]
